--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="main-block">
 
             <div class="main-block__container">
-                <img src="img/main-block/slogan.png" alt="" class="container__slogan">
+                <img src="img/main-block/slogan.png" alt="" class="container__slogan-img">
                 <p class="container__text">Royalty-free sounds. Industry-leading software.<br>Endless inspiration. Start
                     creating
                     with Splice.</p>
@@ -59,26 +59,26 @@
 
         <section class="section-sounds">
 
-            <div class="container1">
-                <p class="container1__caption">SOUNDS</p>
-                <h2 class="container1__slogan">Find your sound</h2>
-                <p class="container1__text">Preview and download millions of royalty-free samples from top producers,
+            <div class="container">
+                <p class="container__caption">SOUNDS</p>
+                <h2 class="container__slogan">Find your <span class="slogan_colored">sound</span></h2>
+                <p class="container__text">Preview and download millions of royalty-free samples from top producers,
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
-                <button class="container1__button">TRY SOUNDS</button>
+                <button class="container__button">TRY SOUNDS</button>
             </div>
             <img src="img/sounds_img.png" alt="" class="section-sounds__img">
         </section>
 
         <section class="section-plugins">
 
-            <img src="" alt="" class="section-plugins__img">
+            <img src="img/Logos.png" alt="" class="section-plugins__img">
 
             <div class="container">
                 <p class="container__caption">PLUGINS</p>
-                <h2 class="container__slogan">Build your digital studio</h2>
+                <h2 class="container__slogan">Build your <span class="slogan_colored">digital studio</span></h2>
                 <p class="container__text">Try industry-leading music software for free? pay it off over time and own it
                     forever.</p>
-                <button class="container__button">TRY GEAR</p><button>
+                <button class="container__button">TRY GEAR</button>
             </div>
 
         </section>
@@ -87,7 +87,7 @@
 
             <div class="container">
                 <p class="container__caption">STUDIO</p>
-                <h2 class="container__slogan">Stay in sync</h2>
+                <h2 class="container__slogan">Stay in <span class="slogan_colored">sync</span></h2>
                 <p class="container__text">Tru industry-leading music software for free, pay it off over time and own it forever.</p>
                 <button class="container__button">TRY STUDIO</button>                
             </div>
@@ -98,7 +98,7 @@
         <section class="section-reviews">
 
             <div class="container">
-                <h2 class="container__slogan">What creators are saying about Splice</h2>
+                <h2 class="container__slogan">What <span class="slogan_colored">creators</span> are saying about Splice</h2>
                 <p class="container__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Augue tellus urna, mi velit diam. Turpis diam amet massa id.</p>
                 <button class="container__button">TRY IT NOW</button>
             </div>
@@ -107,27 +107,43 @@
 
             <div class="section-reviews__review-1">
                 <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
-                <img src="img/review1.png" alt="" class="review__img">
-                <p class="review__name">Andrew Huang</p>
-                <p class="review__artist">Artist</p>
+                <div class="review__author">
+                    <img src="img/review1.png" alt="" class="review__img">
+                    <div class="author">
+                        <p class="author__name">Andrew Huang</p>
+                        <p class="author__artist">Artist</p>
+                    </div>
+                </div>
             </div>
             <div class="section-reviews__review-2">
                 <p class="review__text">Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
-                <img src="img/review2.png" alt="" class="review__img">
-                <p class="review__name">KSHMR</p>
-                <p class="review__artist">Artist</p>
+                <div class="review__author">
+                    <img src="img/review2.png" alt="" class="review__img">
+                    <div class="author">
+                        <p class="author__name">KSHMR</p>
+                        <p class="author__artist">Artist</p>
+                    </div>
+                </div>
             </div>
             <div class="section-reviews__review-3">
                 <p class="review__text">Its been fun to dive into Splicers creator community and explore tools that support my own creative process.</p>
-                <img src="img/review3.png" alt="" class="review__img">
-                <p class="review__name">Kesha Lee</p>
-                <p class="review__artist">Artist</p>
+                <div class="review__author">
+                    <img src="img/review3.png" alt="" class="review__img">
+                    <div class="author">
+                        <p class="author__name">Kesha Lee</p>
+                        <p class="author__artist">Artist</p>
+                    </div>
+                </div>
             </div>
             <div class="section-reviews__review-4">
                 <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
-                <img src="img/review1.png" alt="" class="review__img">
-                <p class="review__name">Andrew Huang</p>
-                <p class="review__artist">Artist</p>
+                <div class="review__author">
+                    <img src="img/review1.png" alt="" class="review__img">
+                    <div class="author">
+                        <p class="author__name">Andrew Huang</p>
+                        <p class="author__artist">Artist</p>
+                    </div>
+                </div>
             </div>
 
 
