--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                     artists, and sound designers. Available on desktop, web, and mobile.</p>
                 <button class="container__button">TRY SOUNDS</button>
             </div>
+
             <img src="img/sounds_img.png" alt="" class="section-sounds__img">
+            
         </section>
 
         <section class="section-plugins">
@@ -165,7 +167,7 @@
                 <div class="advantages__advantage3">
                     <img src="img/download.svg" alt="" class="advantages__img">
                     <p class="advantage__name">Yours forever</p>
-                    <p class="advantage__text">Keep everything download. Even if you cancel.</p>
+                    <p class="advantage__text">Keep everything download. <br>Even if you cancel.</p>
                 </div>
                 <div class="advantages__advantage4">
                     <img src="img/play.svg" alt="" class="advantages__img">
@@ -176,8 +178,10 @@
         </section>
 
         <section class="section-jobs">
-            <h2 class="jobs__slogan">Come change the way people make music</h2>
-            <button class="jobs__button">JOBS AT SPLICE</button>
+            <div class="jobs">
+                <h2 class="jobs__slogan">Come change the way<br>people make music</h2>
+                <button class="jobs__button">JOBS AT SPLICE</button>
+            </div>
         </section>
 
     </main>
@@ -189,14 +193,26 @@
         </div>
         <div class="links">
             <ul class="links__column">
-                <li class="column__h"><h2>STUDIO</h2></li>
+                <h2 class="column__h">STUDIO</h2>
                 <li class="column__link">Features</li>
                 <li class="column__link">About Splice Studio</li>
                 <li class="column__link">Managing Your Production Library</li>
                 <li class="column__link">Collaborating with Baewatch</li>
             </ul>
+        </div>
+        <div class="links">
             <ul class="links__column">
-                <li class="column_h"><h2>COMMUNITY</h2></li>
+                <h2 class="column__h">PLUGINS</h2>
+                <li class="column__link">Top VSTs</li>
+                <li class="column__link">Serum</li>
+                <li class="column__link">Rent to Own</li>
+                <li class="column__link">Free Plugins</li>
+                <li class="column__link">Top Manufacturers</li>
+            </ul>
+        </div>
+        <div class="links">
+            <ul class="links__column">
+                <h2 class="column__h">COMMUNITY</h2>
                 <li class="column__link">Ableton Live Projects</li>
                 <li class="column__link">FL Studio Projects</li>
                 <li class="column__link">Logic Pro X Projects</li>
@@ -204,30 +220,28 @@
                 <li class="column__link">Remix Contests</li>
                 <li class="column__link">Tiestos Secrets</li>
             </ul>
+        </div>
+        <div class="links">
             <ul class="links__column">
-                <li class="column_h"><h2>SOUNDS</h2></li>
+                <h2 class="column__h">BEATMAKER</h2>
+                <li class="column__link">Create Your Own Beat</li>
+                <li class="column__link">Wakapella</li>
+                <li class="column__link">Just Blaze</li>
+            </ul>
+        </div>
+        <div class="links">
+            <ul class="links__column">
+                <h2 class="column__h">SOUNDS</h2>
                 <li class="column__link">Features</li>
                 <li class="column__link">Catalog</li>
                 <li class="column__link">How Jauz Uses Sounds</li>
                 <li class="column__link">deadmau5s Chimaera</li>
                 <li class="column__link">KSHMR Vol. 2</li>
             </ul>
+        </div>
+        <div class="links">
             <ul class="links__column">
-                <li class="column_h"><h2>PLUGINS</h2></li>
-                <li class="column__link">Top VSTs</li>
-                <li class="column__link">Serum</li>
-                <li class="column__link">Rent to Own</li>
-                <li class="column__link">Free Plugins</li>
-                <li class="column__link">Top Manufacturers</li>
-            </ul>
-            <ul class="links__column">
-                <li class="column_h"><h2>BEATMAKER</h2></li>
-                <li class="column__link">Create Your Own Beat</li>
-                <li class="column__link">Wakapella</li>
-                <li class="column__link">Just Blaze</li>
-            </ul>
-            <ul class="links__column">
-                <li class="column_h"><h2>BLOG</h2></li>
+                <h2 class="column__h">BLOG</h2>
                 <li class="column__link">Latest Posts</li>
                 <li class="column__link">Using Soundtoys Decapitator</li>
                 <li class="column__link">Mastering 101</li>
@@ -236,17 +250,19 @@
             </ul>
         </div>
         <div class="socials">
-            <h2 class="socials__slogan">FIND US ON SOCIAL</h2>
-            
-            <img src="img/facebook.svg" alt="" class="socials__item">
-            <img src="img/twitter.svg" alt="" class="socials__item">
-            <img src="img/instagram.svg" alt="" class="socials__item">
-            <img src="img/YouTube.svg" alt="" class="socials__item">
-
+            <h2 class="column__h">FIND US ON SOCIAL</h2>
+            <div class="socials_imgs">
+                <img src="img/facebook.svg" alt="" class="socials__item">
+                <img src="img/twitter.svg" alt="" class="socials__item">
+                <img src="img/instagram.svg" alt="" class="socials__item">
+                <img src="img/YouTube.svg" alt="" class="socials__item">
+            </div>
             <ul class="socials__links">
                 <li class="socials__link">Terms Of Use</li>
                 <li class="socials__link">Privacy Policy</li>
                 <li class="socials__link">Jobs</li>
+            </ul>
+            <ul class="socials__links">
                 <li class="socials__link">Contact</li>
                 <li class="socials__link">Help</li>
             </ul>
