--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
             </nav>
         </div>
         <div class="header__buttons">
-            <a href="" class="header__button-log">LOG IN</a>
-            <a href="" class="header__button-sign">SIGN UP</a>
+            <a href="#" class="header__button-log">LOG IN</a>
+            <button class="header__button-sign" id="openModal">SIGN UP</button>
         </div>
+
+        <div id="popup-overlay">
+            <div id="popup">
+                <h3>Пример всплывающего окна</h3>
+                <p>Это пример всплывающего окна с использованием HTML, CSS и JavaScript.</p>
+                <button onclick="hidePopup()">Закрыть окно</button>
+        </div>
+        </div>
+
     </header>
 
     <main class="main">
@@ -48,12 +57,14 @@
         <section class="section-featured">
 
             <p class="section-featured__caption">FEATURED IN</p>
-            <div class="section-featured__list">
-                <img src="img/featured1.svg" alt="" class="section-featured__img">
-                <img src="img/featured2.svg" alt="" class="section-featured__img">
-                <img src="img/featured3.svg" alt="" class="section-featured__img">
-                <img src="img/featured4.svg" alt="" class="section-featured__img">
-                <img src="img/featured5.svg" alt="" class="section-featured__img">
+            <div class="section-featured__marquee">
+                <div class="section-featured__list" id="marquee">
+                        <img src="img/featured1.svg" alt="" class="section-featured__img">
+                        <img src="img/featured2.svg" alt="" class="section-featured__img">
+                        <img src="img/featured3.svg" alt="" class="section-featured__img">
+                        <img src="img/featured4.svg" alt="" class="section-featured__img">
+                        <img src="img/featured5.svg" alt="" class="section-featured__img">  
+                </div>
             </div>
         </section>
 
