--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <button class="header__button-sign" id="openModal">SIGN UP</button>
         </div>
 
-        <div id="popup-overlay">
+        <!--<div id="popup-overlay">
             <div id="popup">
                 <h3>Пример всплывающего окна</h3>
                 <p>Это пример всплывающего окна с использованием HTML, CSS и JavaScript.</p>
                 <button onclick="hidePopup()">Закрыть окно</button>
         </div>
-        </div>
+        </div>-->
 
     </header>
 
