--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
           </div>
     </header>
 
-    <main class="main">
+    <main class="main" id="content">
+        
+        <div id="preloader">
+            <div class="loader"></div>
+        </div>
+
         <section class="main-block">
 
             <div class="main-block__container">
