Задание 2. карточки начало

--- a/index.html
+++ b/index.html
@@ -138,49 +138,49 @@
             </div>
 
             <img src="img/reviews_img.png" alt="" class="section-reviews__img">
-
-            <div class="section-reviews__review-1">
-                <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
-                <div class="review__author">
-                    <img src="img/review1.png" alt="" class="review__img">
-                    <div class="author">
-                        <p class="author__name">Andrew Huang</p>
-                        <p class="author__artist">Artist</p>
+            
+            <div class="section-reviews__cards" id="cards">
+                <div class="cards__review-1">
+                    <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
+                    <div class="review__author">
+                        <img src="img/review1.png" alt="" class="review__img">
+                        <div class="author">
+                            <p class="author__name">Andrew Huang</p>
+                            <p class="author__artist">Artist</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="section-reviews__review-2">
-                <p class="review__text">Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
-                <div class="review__author">
-                    <img src="img/review2.png" alt="" class="review__img">
-                    <div class="author">
-                        <p class="author__name">KSHMR</p>
-                        <p class="author__artist">Artist</p>
+                <div class="cards__review-2">
+                    <!--<p class="review__text">Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
+                    <div class="review__author">
+                        <img src="img/review2.png" alt="" class="review__img">
+                        <div class="author">
+                            <p class="author__name">KSHMR</p>
+                            <p class="author__artist">Artist</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="section-reviews__review-3">
-                <p class="review__text">Its been fun to dive into Splicers creator community and explore tools that support my own creative process.</p>
-                <div class="review__author">
-                    <img src="img/review3.png" alt="" class="review__img">
-                    <div class="author">
-                        <p class="author__name">Kesha Lee</p>
-                        <p class="author__artist">Artist</p>
+                <div class="cards__review-3">
+                    <p class="review__text">Its been fun to dive into Splicers creator community and explore tools that support my own creative process.</p>
+                    <div class="review__author">
+                        <img src="img/review3.png" alt="" class="review__img">
+                        <div class="author">
+                            <p class="author__name">Kesha Lee</p>
+                            <p class="author__artist">Artist</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="section-reviews__review-4">
-                <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
-                <div class="review__author">
-                    <img src="img/review1.png" alt="" class="review__img">
-                    <div class="author">
-                        <p class="author__name">Andrew Huang</p>
-                        <p class="author__artist">Artist</p>
+                <div class="cards__review-4">
+                    <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
+                    <div class="review__author">
+                        <img src="img/review1.png" alt="" class="review__img">
+                        <div class="author">
+                            <p class="author__name">Andrew Huang</p>
+                            <p class="author__artist">Artist</p>
+                        </div>
                     </div>
-                </div>
+                </div>-->
             </div>
-
-
         </section>
 
         <section class="section-advantages">
