--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <img src="img/reviews_img.png" alt="" class="section-reviews__img">
             
             <div class="section-reviews__cards" id="cards">
-                <div class="cards__review-1">
+                <!--<div class="cards__review-1">
                     <p class="review__text">I can always find what Im looking for in Splice, whether its the exact sound I want or just a bit of inspiration.</p>
                     <div class="review__author">
                         <img src="img/review1.png" alt="" class="review__img">
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="cards__review-2">
-                    <!--<p class="review__text">Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
+                    <p class="review__text">Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
                     <div class="review__author">
                         <img src="img/review2.png" alt="" class="review__img">
                         <div class="author">
