--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                 <div class="swiper-wrapper">
                   <!-- Slides -->
                   <img src="img/sounds_img.png" alt="" class="swiper-slide">
-                  <img src="img/sounds_img.png" alt="" class="swiper-slide">
-                  <img src="img/sounds_img.png" alt="" class="swiper-slide">
+                  <img src="img/screen.jpg" alt="" class="swiper-slide">
                 </div>
                 <div class="swiper-pagination"></div>
             </div>           
