--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Splice-Frontend-Senyushkina</title>
+    <title>BlueEcho-Frontend-Senyushkina</title>
     <link rel="stylesheet" href="styles/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
@@ -17,38 +17,39 @@
 
             <nav class="header__nav">
                 <ul class="header-list">
-                    <li class="header-list__item">STUDIO</li>
-                    <li class="header-list__item">COMMUNITY</li>
-                    <li class="header-list__item">SOUNDS</li>
-                    <li class="header-list__item">PLUGINS</li>
-                    <li class="header-list__item">BLOG</li>
+                    <li class="header-list__item">ПАРТНЕРЫ</li>
+                    <li class="header-list__item">ТУРЫ</li>
+                    <li class="header-list__item">СНАРЯЖЕНИЕ</li>
+                    <li class="header-list__item">ОПЫТ</li>
+                    <li class="header-list__item">ОТЗЫВЫ</li>
+                    <li class="header-list__item">РАБОТА С НАМИ</li>
                 </ul>
             </nav>
         </div>
         <div class="header__buttons">
-            <a href="#" class="header__button-log">LOG IN</a>
-            <button class="header__button-sign" id="openModal">SIGN UP</button>
+            <a href="#" class="header__button-log">ВОЙТИ</a>
+            <button class="header__button-sign openModal">ЗАРЕГИСТРИРОВАТЬСЯ</button>
         </div>
 
         <!--Модальное окно с формой-->
         <div id="myModal" class="modal">
             <div class="modal__content">
                 <span class="modal__close">×</span>
-                <h2 class="modal__header">Book Your Adventure</h2>
+                <h2 class="modal__header">Забронируйте свое приключение</h2>
                 <form id="myForm">
-                    <label for="name" class="form__label">Name:</label><br>
+                    <label for="name" class="form__label">Имя:</label><br>
                     <input type="text" id="name" name="name" class="form__input"><br><br>
-                    <label for="email" class="form__label">Email:</label><br>
+                    <label for="email" class="form__label">Эл. почта:</label><br>
                     <input type="email" id="email" name="email" class="form__input"><br><br>
-                    <label for="tour" class="form__label">Preferred Tour:</label><br>
+                    <label for="tour" class="form__label">Предпоитаемый тур:</label><br>
                     <select id="tour" name="tour" class="form__input">
-                        <option value="whale-swim">Whale Swimming Tour</option>
-                        <option value="reef-dive">Coral Reef Dive</option>
-                        <option value="deep-sea">Deep Sea Exploration</option>
+                        <option value="whale-swim">Плавание с китами</option>
+                        <option value="reef-dive">Погружение в коралловый риф</option>
+                        <option value="deep-sea">Исследование глубин</option>
                     </select><br><br>
                     <div class="form__buttons">
-                        <button type="submit" id="okButton" class="form__button">Submit</button>
-                        <button type="button" id="cancelButton" class="form__button">Cancel</button>
+                        <button type="submit" id="okButton" class="form__button">Отправить</button>
+                        <button type="button" id="cancelButton" class="form__button">Отмена</button>
                     </div>
                 </form>
             </div>
@@ -65,9 +66,8 @@
 
             <div class="main-block__container">
                 <img src="img/main-block/slogan.png" alt="" class="container__slogan-img">
-                <p class="container__text">Dive into the abyss. Discover whale songs,<br>ocean waves, and deep-sea
-                    serenity.</p>
-                <button class="container__button">SIGN UP</button>
+                <p class="container__text">Погрузитесь в бездну. Откройте песни китов,<br>океанские волны и глубинное спокойствие.</p>
+                <button class="container__button openModal">ЗАРЕГИСТРИРОВАТЬСЯ</button>
             </div>
             <div class="image-container">
                 <img src="img/main-block/side.png" alt="" class="main-block__img">
@@ -76,7 +76,7 @@
 
         <section class="section-featured">
 
-            <p class="section-featured__caption">TRUSTED BY</p>
+            <p class="section-featured__caption">НАШИ ПАРТНЕРЫ</p>
             <div class="section-featured__marquee">
                 <div class="section-featured__list" id="marquee">
                     <img src="img/featured1.svg" alt="" class="section-featured__img">
@@ -91,11 +91,10 @@
         <section class="section-sounds">
 
             <div class="container">
-                <p class="container__caption">TOURS</p>
-                <h2 class="container__slogan">Find your <span class="slogan_colored">adventure</span></h2>
-                <p class="container__text">Explore our guided tours to swim with whales and discover vibrant marine
-                    ecosystems. Suitable for all skill levels, available year-round.</p>
-                <button class="container__button">EXPLORE TOURS</button>
+                <p class="container__caption">ТУРЫ</p>
+                <h2 class="container__slogan">Найди свое <span class="slogan_colored">приключение</span></h2>
+                <p class="container__text">Погрузитесь в незабываемые экскурсии с плаванием с китами и открытием удивительных морских экосистем. Независимо от уровня подготовки, мы предлагаем уникальные приключения, доступные круглый год.</p>
+                <button class="container__button">ИЗУЧИТЬ ТУРЫ</button>
             </div>
             <div class="swiper">
                 <!-- Additional required wrapper -->
@@ -114,11 +113,10 @@
             <img src="img/gear.png" alt="" class="section-plugins__img">
 
             <div class="container">
-                <p class="container__caption">GEAR</p>
-                <h2 class="container__slogan">Equip your <span class="slogan_colored">adventure</span></h2>
-                <p class="container__text">Access top-quality diving gear for your ocean journey, available for rent or
-                    purchase with expert guidance.</p>
-                <button class="container__button">EXPLORE GEAR</button>
+                <p class="container__caption">СНАРЯЖЕНИЕ</p>
+                <h2 class="container__slogan">Приготовьтесь к <span class="slogan_colored">приключению</span></h2>
+                <p class="container__text">Получите доступ к высококачественному снаряжению для погружений в океан, доступному для аренды или покупки с профессиональной поддержкой.</p>
+                <button class="container__button">ИЗУЧИТЬ СНАРЯЖЕНИЕ</button>
             </div>
 
         </section>
@@ -126,11 +124,10 @@
         <section class="section-studio">
 
             <div class="container">
-                <p class="container__caption">EXPERIENCES</p>
-                <h2 class="container__slogan">Dive in <span class="slogan_colored">harmony</span></h2>
-                <p class="container__text">Join our guided tours to connect with whales and marine life in their natural
-                    habitat, creating memories that last a lifetime.</p>
-                <button class="container__button">DISCOVER EXPERIENCES</button>
+                <p class="container__caption">ОПЫТ</p>
+                <h2 class="container__slogan">Погрузитесь в <span class="slogan_colored">гармонию</span></h2>
+                <p class="container__text">Присоединяйтесь к нашим экскурсиям, чтобы соединиться с китами и морской жизнью в их естественной среде, создавая воспоминания на всю жизнь.</p>
+                <button class="container__button openModal">ПОЛУЧИТЕ ОПЫТ</button>
             </div>
 
             <img src="img/1117876.png" alt="" class="info-studio__img">
@@ -139,11 +136,10 @@
         <section class="section-reviews">
 
             <div class="container">
-                <h2 class="container__slogan">What <span class="slogan_colored">adventurers</span> are saying about us
+                <h2 class="container__slogan">Что говорят <span class="slogan_colored">путешественники</span> о нас
                 </h2>
-                <p class="container__text">Hear from divers who’ve experienced the magic of swimming with whales in the
-                    open ocean.</p>
-                <button class="container__button">BOOK NOW</button>
+                <p class="container__text">Узнайте от дайверов, которые испытали магию плавания с китами в открытом океане.</p>
+                <button class="container__button">ЗАБРОНИРОВАТЬ СЕЙЧАС</button>
             </div>
 
             <img src="img/reviews_img.png" alt="" class="section-reviews__img">
